Move runtime module option constants to guest staging